--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "dmstr/yii2-adminlte-asset": "~2.5.0"
     },
     "autoload": {
         "psr-4": {
