--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "yiisoft/yii2": "~2.0.0",
         "dmstr/yii2-adminlte-asset": "~2.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.7.0"
+    },
     "autoload": {
         "psr-4": {
             "ylab\\administer\\": "src"
