--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.0",
         "dmstr/yii2-adminlte-asset": "~2.5.0",
-        "kartik-v/yii2-widget-select2": "~2.1.1"
+        "kartik-v/yii2-widget-select2": "~2.1.1",
+        "vova07/yii2-imperavi-widget": "~2.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7.0"
